fix: header align

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -242,7 +242,7 @@ Navigation
   position: absolute;
   height: 26px;
   right: 10px;
-  top: 48px;
+  top: 44px;
   visibility: hidden;
   transition: all 300ms ease-in-out;
 }
@@ -298,7 +298,7 @@ Hero
   width: 100%;
 }
 header {
-  padding: 50px 0;
+  padding: 25px 0;
   border-bottom: solid 1px rgba(255, 255, 255, 0.2);
   position: relative;
   width: 1170px;
@@ -359,7 +359,7 @@ header {
   .member-actions {
     position: absolute;
     right: 0;
-    top: 41px;
+    top: 32px;
     transition: all 300ms ease-in-out;
   }
 }
